Added opening JShell in project context functionality
Uses RequestProcessor for async Jshell init and code eval