@@ -20,12 +20,15 @@ import java.io.PrintStream;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.CancellationException;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutionException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import jdk.jshell.JShell;
 import org.eclipse.lsp4j.NotebookDocument;
+import static org.netbeans.modules.nbcode.java.notebook.NotebookUtils.checkEmptyString;
 
 /**
  *
@@ -33,12 +36,16 @@ import org.eclipse.lsp4j.NotebookDocument;
  */
 public class NotebookSessionManager {
 
-    private static final Logger LOGGER = Logger.getLogger(NotebookSessionManager.class.getName());
-    private final Map<String, JShell> sessions = new ConcurrentHashMap<>();
-    private final Map<String, ByteArrayOutputStream> outputStreams = new ConcurrentHashMap<>();
-    private final Map<String, ByteArrayOutputStream> errorStreams = new ConcurrentHashMap<>();
+    private static final Logger LOG = Logger.getLogger(NotebookSessionManager.class.getName());
     private static final String SOURCE_FLAG = "--source";
     private static final String ENABLE_PREVIEW = "--enable-preview";
+    private static final String CLASS_PATH = "--enable-preview";
+    private static final String MODULE_PATH = "--enable-preview";
+    private static final String ADD_MODULES = "--enable-preview";
+
+    private final Map<String, CompletableFuture<JShell>> sessions = new ConcurrentHashMap<>();
+    private final Map<String, ByteArrayOutputStream> outputStreams = new ConcurrentHashMap<>();
+    private final Map<String, ByteArrayOutputStream> errorStreams = new ConcurrentHashMap<>();
 
     private NotebookSessionManager() {
     }
@@ -51,80 +58,142 @@ public class NotebookSessionManager {
 
         private static final NotebookSessionManager instance = new NotebookSessionManager();
     }
-    private static boolean  checkEmptyString(String input){
-        return (input==null || input.trim().isEmpty());
-    }
-    private JShell jshellBuilder(PrintStream outPrintStream, PrintStream errPrintStream) throws InterruptedException, ExecutionException {
-        List<String> compilerOptions = new ArrayList<>();
-        List<String> remoteOptions = new ArrayList<>();
-        NotebookConfigs.getInstance().getInitialized().get();// wait till intialized 
-        String  notebookJdkVersion = System.getProperty("java.version").split("\\.")[0];
-        String classpath = NotebookConfigs.getInstance().getClassPath();
-        if(!checkEmptyString(classpath)){compilerOptions.add("--class-path");compilerOptions.add(classpath);remoteOptions.add("--class-path");remoteOptions.add(classpath);}
-        String modulePath = NotebookConfigs.getInstance().getModulePath();
-        if(!checkEmptyString(modulePath)){compilerOptions.add("--module-path");compilerOptions.add(modulePath);remoteOptions.add("--module-path");remoteOptions.add(modulePath);}
-        String addModules = NotebookConfigs.getInstance().getAddModules();
-        if(!checkEmptyString(addModules)){compilerOptions.add("--add-modules");compilerOptions.add(addModules);remoteOptions.add("--add-modules");remoteOptions.add(addModules);}
-        boolean isEnablePreview = NotebookConfigs.getInstance().isEnablePreview();
-        if(isEnablePreview){compilerOptions.add("--enable-preview");compilerOptions.add("--source");compilerOptions.add(notebookJdkVersion);remoteOptions.add("--enable-preview");}
-        if(compilerOptions.isEmpty()){
-                return JShell.builder()
-                .out(outPrintStream)
-                .err(errPrintStream)
-                .compilerOptions()
-                .remoteVMOptions()
-                .build();
-        }else{
-                return JShell.builder()
-                .out(outPrintStream)
-                .err(errPrintStream)
-                .compilerOptions(compilerOptions.toArray(new String[compilerOptions.size()]))
-                .remoteVMOptions(remoteOptions.toArray(new String[remoteOptions.size()]))
-                .build();
-        
-        }
 
+    private CompletableFuture<JShell> jshellBuilder(PrintStream outPrintStream, PrintStream errPrintStream) {
+        return CompletableFuture.supplyAsync(() -> {
+            List<String> compilerOptions = getCompilerOptions();
+            List<String> remoteOptions = getRemoteVmOptions();
+            try {
+                NotebookConfigs.getInstance().getInitialized().get();
+            } catch (InterruptedException ex) {
+                LOG.log(Level.WARNING, "InterruptedException occurred while getting notebook configs: {0}", ex.getMessage());
+            } catch (ExecutionException ex) {
+                LOG.log(Level.WARNING, "ExecutionException occurred while getting notebook configs: {0}", ex.getMessage());
+            }
 
+            if (compilerOptions.isEmpty()) {
+                return JShell.builder()
+                        .out(outPrintStream)
+                        .err(errPrintStream)
+                        .compilerOptions()
+                        .remoteVMOptions()
+                        .build();
+            } else {
+                return JShell.builder()
+                        .out(outPrintStream)
+                        .err(errPrintStream)
+                        .compilerOptions(compilerOptions.toArray(new String[0]))
+                        .remoteVMOptions(remoteOptions.toArray(new String[0]))
+                        .build();
+            }
+        });
     }
 
     public void createSession(NotebookDocument notebookDoc) {
         String notebookId = notebookDoc.getUri();
 
         sessions.computeIfAbsent(notebookId, (String id) -> {
-            try {
-                ByteArrayOutputStream outStream = new ByteArrayOutputStream();
-                ByteArrayOutputStream errStream = new ByteArrayOutputStream();
-                outputStreams.put(id, outStream);
-                errorStreams.put(id, errStream);
+            ByteArrayOutputStream outStream = new ByteArrayOutputStream();
+            ByteArrayOutputStream errStream = new ByteArrayOutputStream();
+            outputStreams.put(notebookId, outStream);
+            errorStreams.put(notebookId, errStream);
 
-                PrintStream outPrintStream = new PrintStream(outStream, true);
-                PrintStream errPrintStream = new PrintStream(errStream, true);
+            PrintStream outPrintStream = new PrintStream(outStream, true);
+            PrintStream errPrintStream = new PrintStream(errStream, true);
+            CompletableFuture<JShell> future = jshellBuilder(outPrintStream, errPrintStream);
 
-                JShell jshell = jshellBuilder(outPrintStream, errPrintStream);
-                jshell.onShutdown(shell -> closeSession(notebookId));
+            future.thenAccept(jshell -> onJshellInit(notebookId, jshell))
+                    .exceptionally(ex -> {
+                        LOG.log(Level.SEVERE, "Error creating notebook session: {0}", ex.getMessage());
+                        throw new IllegalStateException("Error while creating notebook session");
+                    });
 
-                boolean implicitImports = true;
-                if (implicitImports) {
-                    List<String> packages = NotebookConfigs.getInstance().getImplicitImports();
-                    if(packages!=null && !packages.isEmpty()){
-                        packages.forEach(pkg -> CodeEval.runCode(jshell, "import " + pkg));
-                    }else{
-                        List.of("java.util", "java.io", "java.math")
-                            .forEach(pkg -> CodeEval.runCode(jshell, "import " + pkg + ".*"));
-                    }
-
-                }
-
-                return jshell;
-            } catch (IllegalStateException | InterruptedException | ExecutionException e) {
-                LOGGER.log(Level.SEVERE, "Error creating notebook session: {0}", e.getMessage());
-                throw new IllegalStateException("Error while creating notebook session");
-            }
+            return future;
         });
     }
 
-    public JShell getSession(String notebookId) {
+    private List<String> getCompilerOptions() {
+        List<String> compilerOptions = new ArrayList<>();
+        String classpath = NotebookConfigs.getInstance().getClassPath();
+        String modulePath = NotebookConfigs.getInstance().getModulePath();
+        String addModules = NotebookConfigs.getInstance().getAddModules();
+        boolean isEnablePreview = NotebookConfigs.getInstance().isEnablePreview();
+        String notebookJdkVersion = NotebookConfigs.getInstance().getJdkVersion();
+
+        if (!checkEmptyString(classpath)) {
+            compilerOptions.add(CLASS_PATH);
+            compilerOptions.add(classpath);
+        }
+        if (!checkEmptyString(modulePath)) {
+            compilerOptions.add(MODULE_PATH);
+            compilerOptions.add(modulePath);
+        }
+        if (!checkEmptyString(addModules)) {
+            compilerOptions.add(ADD_MODULES);
+            compilerOptions.add(addModules);
+        }
+        if (isEnablePreview) {
+            compilerOptions.add(ENABLE_PREVIEW);
+            compilerOptions.add(SOURCE_FLAG);
+            compilerOptions.add(notebookJdkVersion);
+        }
+
+        return compilerOptions;
+    }
+
+    private List<String> getRemoteVmOptions() {
+        List<String> remoteOptions = new ArrayList<>();
+        String classpath = NotebookConfigs.getInstance().getClassPath();
+        String modulePath = NotebookConfigs.getInstance().getModulePath();
+        String addModules = NotebookConfigs.getInstance().getAddModules();
+        boolean isEnablePreview = NotebookConfigs.getInstance().isEnablePreview();
+
+        if (!checkEmptyString(classpath)) {
+            remoteOptions.add(CLASS_PATH);
+            remoteOptions.add(classpath);
+        }
+        if (!checkEmptyString(modulePath)) {
+            remoteOptions.add(MODULE_PATH);
+            remoteOptions.add(modulePath);
+        }
+        if (!checkEmptyString(addModules)) {
+            remoteOptions.add(ADD_MODULES);
+            remoteOptions.add(addModules);
+        }
+        if (isEnablePreview) {
+            remoteOptions.add(ENABLE_PREVIEW);
+        }
+
+        return remoteOptions;
+    }
+
+    private void onJshellInit(String notebookId, JShell jshell) {
+        jshell.onShutdown(shell -> closeSession(notebookId));
+
+        List<String> packages = NotebookConfigs.getInstance().getImplicitImports();
+        if (packages != null && !packages.isEmpty()) {
+            packages.forEach(pkg -> CodeEval.runCode(jshell, "import " + pkg));
+        } else {
+            List.of("java.util", "java.io", "java.math")
+                    .forEach(pkg -> CodeEval.runCode(jshell, "import " + pkg + ".*"));
+        }
+    }
+
+    public CompletableFuture<JShell> getSessionFuture(String notebookId) {
         return sessions.get(notebookId);
+    }
+
+    public JShell getSession(String notebookId) {
+        try {
+            CompletableFuture<JShell> future = sessions.get(notebookId);
+            if (future == null) {
+                return null;
+            }
+            return future.get();
+        } catch (InterruptedException | ExecutionException | CancellationException ex) {
+            LOG.log(Level.WARNING, "Error while fetching session for {0}", notebookId);
+        }
+        return null;
     }
 
     public ByteArrayOutputStream getOutputStreamById(String notebookId) {
@@ -136,7 +205,8 @@ public class NotebookSessionManager {
     }
 
     public void closeSession(String notebookUri) {
-        JShell jshell = sessions.remove(notebookUri);
+        CompletableFuture<JShell> future = sessions.remove(notebookUri);
+        JShell jshell = future.getNow(null);
         if (jshell != null) {
             jshell.close();
         }
